@@ -274,17 +274,17 @@ public class ProxyTester {
     if (type == Date.class)
       return new Date(10L + initializer);
     if (type == Boolean.class || type == boolean.class)
-      return new Boolean((initializer & 1) == 0);
+      return Boolean.valueOf((initializer & 1) == 0);
     if (type == Integer.class || type == int.class)
-      return new Integer(initializer);
+      return Integer.valueOf(initializer);
     if (type == Long.class || type == long.class)
-      return new Long(initializer);
+      return Long.valueOf(initializer);
     if (type == Double.class || type == double.class)
-      return new Double((initializer * 1.0) / 100);
+      return Double.valueOf((initializer * 1.0) / 100);
     if (type == Float.class || type == float.class)
-      return new Float((initializer * 1.0) / 100);
+      return Float.valueOf(initializer / 100.0f);
     if (type == Character.class || type == char.class)
-      return new Character((char) ('a' + initializer));
+      return Character.valueOf((char) ('a' + initializer));
     if (type == BigDecimal.class)
       return new BigDecimal(initializer);
     if (type == Set.class) {
